thymeleaf view templete setting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 #server
 server.port=8080
+#spring.mvc.view.prefix=/WEB-INF/jsp/
+#spring.mvc.view.suffix=.jsp
 
-
+#thymeleaf configuration
+spring.thymeleaf.prefix=/WEB-INF/jsp/
+spring.thymeleaf.suffix=.jsp
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.encoding=UTF-8
 
 #H2 Setting 
 spring.h2.console.enabled=true
