static resource path 수정중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 #server
 server.port=8080
-#spring.mvc.view.prefix=/WEB-INF/jsp/
-#spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
 
 #thymeleaf configuration
-spring.thymeleaf.prefix=/WEB-INF/jsp/
-spring.thymeleaf.suffix=.jsp
+spring.view.view-names:themeleaf/*
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 spring.thymeleaf.mode=LEGACYHTML5
@@ -15,6 +14,13 @@ spring.thymeleaf.encoding=UTF-8
 spring.h2.console.enabled=true
 spring.datasource.initialization-mode=always
 spring.jpa.generate-ddl=true
+
+#resources 
+spring.mvc.static-path-pattern:/rss/**
+spring.resources.static-locations=classpath:/rss/
+spring.resources.add-mappings=true 
+
+
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.path=/h2Console
