--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,16 @@
 			<artifactId>thymeleaf</artifactId>
 			<version>3.0.9.RELEASE</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.webjars.bower</groupId>
+		    <artifactId>jquery</artifactId>
+		    <version>3.3.1 </version>
+		</dependency>
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>webjars-locator-core</artifactId>
+		    <version>0.35</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
