mybatis setting is not complete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,13 +15,15 @@ spring.h2.console.enabled=true
 spring.datasource.initialization-mode=always
 spring.jpa.generate-ddl=true
 
-#resources 
+#static resources 
 spring.mvc.static-path-pattern:/rss/**
 spring.resources.static-locations=classpath:/rss/
 spring.resources.add-mappings=true 
 
+#Mybatis
+mybatis.config-location=classpath:mybatis-config.xml
 
-
+#Database
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.path=/h2Console
 spring.datasource.driverClassName=org.h2.Driver
