--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,17 @@
         	<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-data-jpa</artifactId>
     	</dependency>
+		<!-- Database -->
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>8.0.14</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.mybatis.spring.boot</groupId>
+		    <artifactId>mybatis-spring-boot-starter</artifactId>
+		    <version>2.0.0</version>
+		</dependency>
 		<dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
