--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,12 @@ spring.resources.static-locations=classpath:/rss/
 spring.resources.add-mappings=true 
 
 #Mybatis
-mybatis.config-location=classpath:mybatis-config.xml
+mybatis.config-location=classpath:/mybatis-config.xml
+#mybatis.mapperLocations = classpath*:**/mapper/*Mapper.xml
+mybatis.typeAliasesPackage=com.younahShop.dao
+
+#datasource
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #Database
 spring.datasource.url=jdbc:h2:mem:testdb
