cannot connect to mapper.xml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,7 @@ spring.resources.add-mappings=true
 
 #Mybatis
 mybatis.config-location=classpath:/mybatis-config.xml
-#mybatis.mapperLocations = classpath*:**/mapper/*Mapper.xml
-mybatis.typeAliasesPackage=com.younahShop.dao
+mybatis.mapperLocations = classpath*:**/mapper/*Mapper.xml
 
 #datasource
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
