modify mybatis with mapper.xml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,10 @@ spring.resources.static-locations=classpath:/rss/
 spring.resources.add-mappings=true 
 
 #Mybatis
+mybatis.type-aliases-package=com.younahShop.dao
+logging.level.com.younahShop.dao = TRACE
 mybatis.config-location=classpath:/mybatis-config.xml
-mybatis.mapperLocations = classpath*:**/mapper/*Mapper.xml
+mybatis.mapperLocations = classpath:/mapper/*Mapper.xml
 
 #datasource
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
